--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Blackhole C++ Logger
  Fast C++ logging library with dynamic attributes.
 
-Package: blackhole-dbg
+Package: libblackhole-dbg
 Section: debug
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libblackhole1 (= ${binary:Version})
