--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,13 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
+DH_VERBOSE = 1
 
 %:
 	dh $@ 
 
+override_dh_auto_configure:
+	cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_VERBOSE_MAKEFILE=ON
+
+.PHONY: override_dh_strip
+override_dh_strip:
+	dh_strip --dbg-package=libblackhole-dbg
