feat: complete TSKV formatter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,7 +240,8 @@ if (ENABLE_TESTING)
         tests/src/unit/sink/udp.cpp
         tests/src/unit/stdext/string_view
         tests/src/unit/termcolor.cpp
-        tests/wrapper)
+        tests/wrapper
+    )
 
     add_dependencies(${LIBRARY_NAME}-tests googlemock)
 
