chore: add TSKV formatter benchmarks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,6 +271,7 @@ if (ENABLE_BENCHMARKING)
         bench/datetime
         bench/formatter/json
         bench/formatter/string
+        bench/formatter/tskv.cpp
         bench/logger
         bench/main
         bench/queue
