--- a/.shippable.yml
+++ b/.shippable.yml
@@ -11,6 +11,6 @@ build:
     - sudo apt-get install libboost-system-dev
     - sudo apt-get install valgrind
     - mkdir -p build && cd build
-    - cmake -DENABLE_TESTING=ON -DCMAKE_BUILD_TYPE=${BUILD_TYPE} ..
+    - cmake -DENABLE_TESTING=ON ..
     - make
     - valgrind ./blackhole-tests
